# journal

./: Cargo.toml  flake.nix
src/: alternate_screen.rs  entry_list.rs  main.rs  raw_mode.rs
