[package]
name = "journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
crossterm = "0.27.0"
ratatui = "0.24.0"
rpassword = "7.2.0"
rust-argon2 = "2.0.0"
zeroize = "1.6.0"

[profile.dev.package.rust-argon2]
opt-level = 3
